app/assets/stylesheets/main.less
/* ... */
.alert {
  position: relative;
  z-index: 1;
}

body.document-set-show {
  @left_width: 50%;
  @right_width: 50%;
  @tree_height: 55%;
  @focus_height: 15px;

  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;

  #document {
    position: absolute;
    right: 5px;
    left: @left_width;
    margin-left: 5px;
    top: 42px; // navbar -- will be resized
    margin-top: 5px;
    bottom: 5px;
    border: 1px solid #ccc;

    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      border: none;
      padding: 0;
      margin: 0;
    }
  }

  #main {
    position: absolute;
    left: 0;
    width: @left_width;
    top: 42px; // navbar -- will be altered in JS
    bottom: 0;
    box-sizing: border-box;
  }

  #tree {
    height: @tree_height;
    padding-bottom: 10px;
    box-sizing: border-box;
    margin: 5px 5px 0;
    padding: 5px;
    border: 1px solid #ccc;
    border-bottom: none;
  }

  #focus {
    position: relative;
    height: @focus_height + 2px;
    margin: 0 5px;
    border: 1px solid #ccc; // including border-top

    .line {
      top: 0;
      height: @focus_height;
      background: @wellBackground;
    }

    .handle {
      top: 0;
      height: @focus_height;
      background: #ddd;
      border: 1px solid @grayLight;

      &.right {
        cursor: e-resize;
        border-left: none;
      }
      &.left {
        cursor: w-resize;
        border-right: none;
      }
    }

    .middle {
      top: 0;
      height: @focus_height;
      cursor: move;
      background: #ddd;
      border: 1px solid @grayLight;
      border-left: none;
      border-right: none;
    }
  }

  #tag-list {
    max-height: 15%;
    overflow: auto;
    margin-top: 5px;
    margin-right: 5px;
    margin-left: 1px;

    ul {
      margin: 0 5px 5px 0;
      padding: 0;
      list-style: none;
    }

    li {
      vertical-align: middle;
    }

    form {
      margin-bottom: 0;
    }

    .tag-name {
      .border-radius(@inputBorderRadius);

      #gradient > .vertical(fade(white, 70%), fade(white, 0%));
      background-color: transparent;

      min-width: 60px;
      max-width: 30em;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      text-align: left;
    }

    .btn-group {
      .border-radius(@inputBorderRadius);
      margin-left: 5px;
      margin-top: 5px;

      .btn {
        padding: 4px 10px; // same padding as other elements on this page
      }

      & > .btn { z-index: 2; } // fixes :hover disappearing when z-index changes

      &.selected {
        .tag-name {
          outline: 2px solid black;
        }

        .btn {
          .border-radius(0);
        }
      }

      &.shown .tag-name {
        color: black;
      }

      .tag-edit, .tag-add, .tag-remove {
        position: absolute;
        background-color: whiteSmoke;
        border-color: transparent;
        padding: 3px;
        width: 12px;
        top: 2px;
        right: 2px;
        overflow: hidden;
        text-align: center;
        border: none;
        opacity: 0.01;
        .transition(opacity 0.3s ease);
      }

      .tag-edit {
        right: 40px;
      }

      .tag-add {
        right: 21px;
      }

      .tag-remove {
        .border-right-radius(3px);
      }

      &:hover {
        .tag-edit, .tag-add, .tag-remove {
          opacity: 1;
        }
      }
    }
  }

  #document-list {
    box-sizing: border-box;
    margin: 5px;
    padding: 0;
    border: 1px solid #ccc;
    position: relative;

    h4 {
      margin: 0;
      padding: 0 10px;
      height: 1.8em;
      line-height: 1.8;
      white-space: nowrap;
      font-weight: normal;
      font-size: 1em;
      border-bottom: 1px solid #ccc;
      background: @wellBackground;
      overflow: hidden;
      text-overflow: ellipsis;

      a {
        display: none;
        float: right;
        color: @linkColor;
        height: 1.8em;
        line-height: 1.8em;
      }
    }

    h4:hover a {
      display: block;
      position: relative; // otherwise users can't click, in Chrome 22
      background: @wellBackground; // IE9 won't detect the change in the h4 text's width, but we can at least hide the text. Issue #193.
    }

    ul {
      overflow: auto;
      position: absolute;
      top: 1.8em;
      bottom: 0;
      left: 0;
      right: 0;
      margin: 1px 0 0; // from border-bottom on .num-documents
      padding: 5px 0;
      list-style: none;
    }

    li {
      margin: 0;
      padding: 0;
      white-space: nowrap;
      line-height: 1.5;

      &.placeholder {
        color: @gray;
      }
    }

    a {
      display: block;
      padding: 0 10px;
      color: inherit;
      text-decoration: inherit;
      overflow: hidden;
      text-overflow: ellipsis;

      &:hover {
        background: @wellBackground;
      }

      &.selected {
        color: @black;
        font-weight: bold;
      }
    }

    &.all-selected a {
      color: @black;
      font-weight: bold;
    }

    span.tags {
      span {
        display: inline-block;
        width: 10px;
        height: 10px;
        margin: 0 5px 0 0;
        border: 1px solid @gray;
      }
    }
  }
}
/* ... */

